eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Customer_Service_Observation_Form__c.object
<CustomObject>
    <fields>
        <fullName>ANC_follow_up_arranged__c</fullName>
        <inlineHelpText>A follow up call has been booked in the diary to confirm receipt with customer.</inlineHelpText>
        <label>ANC follow up arranged</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accurate_not_misleading_product_info__c</fullName>
        <inlineHelpText>Did the consultant provide accurate process and product information to the customer and was this done in a timely and friendly manner in response to the customer request</inlineHelpText>
        <label>Accurate &amp; not misleading product info</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accurately_Update_Systems__c</fullName>
        <inlineHelpText>Do case, call wrap etc. match the customers call request and is the request accurately recorded. Has the agent identified through questioning the correct CAMPAIGN CODE and entered this correctly</inlineHelpText>
        <label>Accurately Update Systems</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <color>#FF9900</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acknowledge_buying_signals__c</fullName>
        <inlineHelpText>Did the consultant react positively to customer buying signals by re affirming how the product would be beneficial to the customers needs .</inlineHelpText>
        <label>Acknowledge buying signals</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appropriate_use_of_Customer_Name__c</fullName>
        <inlineHelpText>Did the consultant use the customers name appropriately throughout the call to control their attention? (suggested around signposting)</inlineHelpText>
        <label>Appropriate use of Customer Name</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ask_for_business__c</fullName>
        <inlineHelpText>Did the consultant confirm with the customer the product they were going to open today for them e.g. So just to re-cap having discussed the most appropriate account with you you would like me to proceed with an application for the 60 day account today?</inlineHelpText>
        <label>Ask for business</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Details_captured__c</fullName>
        <inlineHelpText>Collected customer bank details by explaining that we ask for this information to help with our Electronic verfication, overcoming customer concerns if appropriate</inlineHelpText>
        <label>Bank Details captured</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefits_of_SMART_Banking__c</fullName>
        <inlineHelpText>Did we outline to the customer the benefits of IVR verification i.e. we can handle their call more quickly as well as facilities offered via on-line banking if appropriate?</inlineHelpText>
        <label>Benefits of SMART Banking</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Centre_KPI_s_Call_Centre_KPI_s_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Centre KPI&apos;s Call Centre KPI&apos;s Link</label>
        <referenceTo>Call_Centre_KPI_s__c</referenceTo>
        <relationshipLabel>Customer Service Observation Forms</relationshipLabel>
        <relationshipName>Customer_Service_Observation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Close__c</fullName>
        <formula>IF(OR(TEXT( Recap_Call__c )=&quot;Yes&quot;, TEXT( Recap_Call__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Signpost_Next_Steps__c  )=&quot;Yes&quot;, TEXT( Signpost_Next_Steps__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Confirm_Customer_Satisfaction__c  )=&quot;Yes&quot;, TEXT( Confirm_Customer_Satisfaction__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Recommendation__c )=&quot;Yes&quot;, TEXT( Recommendation__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Offer_further_Assistance__c )=&quot;Yes&quot;, TEXT( Offer_further_Assistance__c )=&quot;N/A&quot;), 2.5, 0)+ 
IF(OR(TEXT( ANC_follow_up_arranged__c )=&quot;Yes&quot;, TEXT( ANC_follow_up_arranged__c )=&quot;N/A&quot;), 2.5, 0)+ 
IF(OR(TEXT( Standard_Call_Close__c )=&quot;Yes&quot;, TEXT( Standard_Call_Close__c )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Close</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Opening_Points__c</fullName>
        <formula>IF(OR(TEXT( Greet_the_Customer__c )=&quot;Yes&quot;, TEXT( Greet_the_Customer__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT(  Reason_for_calling__c  )=&quot;Yes&quot;, TEXT( Reason_for_calling__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Collection_of_Marketing_info__c )=&quot;Yes&quot;, TEXT( Collection_of_Marketing_info__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT(  Correct_ID_V__c  )=&quot;Yes&quot;, TEXT( Correct_ID_V__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT( Understand_customers_satisfaction_with_c__c )=&quot;Yes&quot;, TEXT( Understand_customers_satisfaction_with_c__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Understand_what_would_make_the_customer__c )=&quot;Yes&quot;, TEXT( Understand_what_would_make_the_customer__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Summarise_needs_and_match__c )=&quot;Yes&quot;, TEXT( Summarise_needs_and_match__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Identify_all_selling_opportunities__c )=&quot;Yes&quot;, TEXT( Identify_all_selling_opportunities__c )=&quot;N/A&quot;), 2.5, 0)+ 
IF(OR(TEXT( Customer_ownership__c )=&quot;Yes&quot;, TEXT( Customer_ownership__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Placing_Customers_on_Hold__c )=&quot;Yes&quot;, TEXT( Placing_Customers_on_Hold__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Full_DPA_Disclaimers__c )=&quot;Yes&quot;, TEXT( Full_DPA_Disclaimers__c )=&quot;N/A&quot;), 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Opening Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Recording_URL__c</fullName>
        <inlineHelpText>Please copy and paste the call recording URL from the call wrap activity.</inlineHelpText>
        <label>Call Recording URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Call_Transaction_Type__c</fullName>
        <inlineHelpText>Please select what the main purpose of the customer call was?</inlineHelpText>
        <label>Call Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>BACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHAPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing Order Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing Order cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing Order set up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card query/Cancellation request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIN request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Closure request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIB/Cheque Book request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB password/memorable info re-set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Securecode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Day notice withdrawal request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD withdrawal request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoming payment issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction disputes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online re-set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP Apppointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP -not eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Call_Wrapped__c</fullName>
        <inlineHelpText>Did the agent correctly wrap the call against the nature of the enquiry?</inlineHelpText>
        <label>Call Wrapped</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Added__c</fullName>
        <label>Case Added</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coachee_s_Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coachee&apos;s Line Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Service_Observation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colleagues_Signature__c</fullName>
        <inlineHelpText>Colleague to Sign Here</inlineHelpText>
        <label>Colleagues Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collection_of_Marketing_info__c</fullName>
        <inlineHelpText>Did consultant ask where they had heard about Al Rayan Bank products to discuss quoting Source Promo code where applicable.</inlineHelpText>
        <label>Collection of Marketing info</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments10__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments11__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments12__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliant__c</fullName>
        <formula>IF( 
OR(TEXT( Correct_ID_V__c )=&quot;No&quot;, 
TEXT( Provide_Accurate_not_misleading_infor__c )=&quot;No&quot;, 
TEXT( Accurately_Update_Systems__c )=&quot;No&quot;,
TEXT( Missed_Alerts__c )=&quot;No&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fuOk&quot;, &quot;Non-Compliant&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fuOf&quot;, &quot;Compliant&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Customer_Satisfaction__c</fullName>
        <inlineHelpText>Did the consultant during the call close confirm the customers satisfaction with the service received? e.g. Are you happy with everything we&apos;ve discussed today?</inlineHelpText>
        <label>Confirm Customer Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correct_Contact_Details__c</fullName>
        <inlineHelpText>Did we confirm and update the customers contact details on the call?</inlineHelpText>
        <label>Correct Contact Details</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correct_ID_V__c</fullName>
        <inlineHelpText>Correct ID &amp; V process followed for identifying the customer</inlineHelpText>
        <label>Correct ID &amp; V</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Courteous_professional__c</fullName>
        <inlineHelpText>Did the consultant confirm with the customer that they understood the cover discussed whilst mirroring the customers pace of understanding?</inlineHelpText>
        <label>Courteous &amp; professional</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Serv_Sales_Coaching_Record_link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Serv Sales Coaching Record link</label>
        <referenceTo>Customer_Service_Observation_Form__c</referenceTo>
        <relationshipLabel>Customer Service Observation Forms</relationshipLabel>
        <relationshipName>Customer_Service_Observation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_name_Active_listening__c</fullName>
        <inlineHelpText>Did the consultant gather and use the customers name in the call opening. Was this done in a friendly and enthusiastic way?</inlineHelpText>
        <label>Customer name &amp; Active listening</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_ownership__c</fullName>
        <inlineHelpText>Did the consultant set the agenda upfront for the whole call including timescales and discuss options and commitments including advantage of EKYC over ANC process</inlineHelpText>
        <label>Customer ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customers_name__c</fullName>
        <inlineHelpText>Please enter the customers name</inlineHelpText>
        <label>Customers name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Observation__c</fullName>
        <inlineHelpText>Date Coaching record completed</inlineHelpText>
        <label>Date of Observation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_time_of_Call__c</fullName>
        <inlineHelpText>Date and time of customer call observed</inlineHelpText>
        <label>Date &amp; time of Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EBS_Customer_No__c</fullName>
        <inlineHelpText>Please enter EBS Number for the customer (Maximum 6 digit nmemonic)</inlineHelpText>
        <label>EBS Customer No.</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EKYC_ANC_Processing__c</fullName>
        <formula>IF(OR(TEXT( System_Question_Gather_all_required_in__c )=&quot;Yes&quot;, TEXT( System_Question_Gather_all_required_in__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT( Bank_Details_captured__c )=&quot;Yes&quot;, TEXT( Bank_Details_captured__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( EKYC_Disclaimer_and_savings_disclaimer__c )=&quot;Yes&quot;, TEXT( EKYC_Disclaimer_and_savings_disclaimer__c )=&quot;N/A&quot;), 5, 0)+ 
IF(OR(TEXT(  Call_Wrapped__c  )=&quot;Yes&quot;, TEXT( Call_Wrapped__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( EKYC_Account_Block_Alert__c )=&quot;Yes&quot;, TEXT( EKYC_Account_Block_Alert__c )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EKYC ANC Processing</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EKYC_Account_Block_Alert__c</fullName>
        <inlineHelpText>Did the agent correctly block the account apply special conditions and apply the correct alert/case notes for the customer?</inlineHelpText>
        <label>EKYC Account Block/Alert</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EKYC_Disclaimer_and_savings_disclaimer__c</fullName>
        <inlineHelpText>Was full disclaimer read out to the customer and customer consent obtained. If EKYC fail then is this handled appropriately outlining the full KYC documentation requirements to the customer!</inlineHelpText>
        <label>EKYC Disclaimer and savings disclaimer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmpathySales__c</fullName>
        <inlineHelpText>Did the consultant actively listen to the customers request and clearly understand the customers requirements? Did they use appropriate questionining and positive phrases e.g. I will be more than happy to get that sorted for you?</inlineHelpText>
        <label>Empathy</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Empathy__c</fullName>
        <inlineHelpText>Did the consultant actively listen to the customers request and clearly understand the customers requirements? Did they use appropriate questionining and positive phrases?</inlineHelpText>
        <label>Empathy, Friendly &amp; Helpful</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Explain_product_features_and_benefits__c</fullName>
        <inlineHelpText>When discussing the features of the product did they promote the benefits conversationally by linking back or identifying customer needs promote (USP)? E.g explanation of the halal savings, T&amp;C&apos;s, how profit rates work, SMART Banking,</inlineHelpText>
        <label>Explain product features and benefits</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feedback_provided_to_lead_generator__c</fullName>
        <inlineHelpText>Outcome of lead updated on sales force to enable colleague to see whether lead has been converted to a sale.</inlineHelpText>
        <label>Feedback provided to lead generator</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friendly_helpful__c</fullName>
        <inlineHelpText>Was the consultants tone, pace and clarity warm and friendly towards the customer. Did they use the customers name appropriately throughout the call, build customer rapport, match and mirror customer pace and tone (if appropriate).</inlineHelpText>
        <label>Friendly &amp; helpful</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_DPA_Disclaimers__c</fullName>
        <inlineHelpText>Consent to hold details on our computer/consent to refer on and also consent to mail (Opt in or Opt out)</inlineHelpText>
        <label>Full DPA Disclaimers</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Greet_the_Customer__c</fullName>
        <inlineHelpText>Did they use the standard call opening adopting a warm and friendly tone, allowing the customer to respond where applicable? Inform the customer that the calls are recorded for training and monitoring purposes?</inlineHelpText>
        <label>Greet the Customer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identify_all_selling_opportunities__c</fullName>
        <inlineHelpText>Did the consultant pick up on any other buying signals to maximise any selling/cross-selling opportunities</inlineHelpText>
        <label>Identify all selling opportunities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identifying_Other_Needs__c</fullName>
        <inlineHelpText>Did the consultant listen attentively during the call and confidently present any potential other suitable products to the customer e.g. notice account fixed term deposits, HPP. Did the agent create the opportunity/lead with correct CAMPAIGN CODE</inlineHelpText>
        <label>Identifying Other Needs/Suitable Product</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_learning_next_call_Maximum_3__c</fullName>
        <inlineHelpText>Enter three development areas to be implemented before next call coaching observation 
1 
2 
3</inlineHelpText>
        <label>Key learning next call (Maximum 3)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Length_of_Call_Seconds__c</fullName>
        <inlineHelpText>Please enter the Length of the call in seconds</inlineHelpText>
        <label>Length of Call (Seconds)</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Manager_Signature__c</fullName>
        <label>Line Manager Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Missed_Alerts__c</fullName>
        <inlineHelpText>Did the consultant take note any alerts on the customers profile?</inlineHelpText>
        <label>Noted Alerts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Coach</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Service_Observation_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_further_Assistance__c</fullName>
        <inlineHelpText>Did the consultant during the call close ask the customer if they could be of further assistance? e.g. Is there anything else I can help you with today?</inlineHelpText>
        <label>Offer further Assistance?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Open_Call_Verification_Points__c</fullName>
        <formula>IF(OR(TEXT( Greet_the_Customer__c )=&quot;Yes&quot;, TEXT( Greet_the_Customer__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Reason_for_calling__c )=&quot;Yes&quot;, TEXT( Reason_for_calling__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Correct_ID_V__c )=&quot;Yes&quot;, TEXT( Correct_ID_V__c )=&quot;N/A&quot;), 10, 0) + 
IF(OR(TEXT( Benefits_of_SMART_Banking__c )=&quot;Yes&quot;, TEXT(Benefits_of_SMART_Banking__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Correct_Contact_Details__c )=&quot;Yes&quot;, TEXT( Correct_Contact_Details__c )=&quot;N/A&quot;), 2.5, 0) + 
IF(OR(TEXT( Missed_Alerts__c )=&quot;Yes&quot;, TEXT( Missed_Alerts__c )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Call &amp; Verification Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Link</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Service Observation Forms</relationshipLabel>
        <relationshipName>Customer_Service_Observation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Spotting_and_Close_Points__c</fullName>
        <formula>IF(OR(TEXT(  Signpost_Next_Steps__c  )=&quot;Yes&quot;, TEXT( Signpost_Next_Steps__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT(  Call_Wrapped__c  )=&quot;Yes&quot;, TEXT(Call_Wrapped__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT(  Case_Added__c  )=&quot;Yes&quot;, TEXT( Case_Added__c  )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT( Confirm_Customer_Satisfaction__c )=&quot;Yes&quot;, TEXT( Confirm_Customer_Satisfaction__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT( Offer_further_Assistance__c )=&quot;Yes&quot;, TEXT(Offer_further_Assistance__c )=&quot;N/A&quot;), 5, 0) + 
IF(OR(TEXT( Standard_Call_Close__c )=&quot;Yes&quot;, TEXT( Standard_Call_Close__c )=&quot;N/A&quot;), 2.5, 0) +
IF(OR(TEXT(  Identifying_Other_Needs__c  )=&quot;Yes&quot;, TEXT( Identifying_Other_Needs__c  )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT(   Accurate_not_misleading_product_info__c  )=&quot;Yes&quot;, TEXT( Accurate_not_misleading_product_info__c  )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT(    Sharia_a_Compliance__c   )=&quot;Yes&quot;, TEXT( Sharia_a_Compliance__c   )=&quot;N/A&quot;), 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Spotting and Close Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>